[package]
name = "mgf-species-dataset-creator"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/earth-metabolome-initiative/mgf-species-dataset-creator"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
indicatif = "0.18"
mascot-rs = { git = "https://github.com/LucaCappelletti94/mascot-rs" }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zenodo-rs = { version = "0.1", features = ["checksums", "indicatif", "rustls-ring-tls"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
